2008-11-27  Sam Steingold  <sds@gnu.org>

	* number2.tst: check (log 0) in all incarnations (bug [ 2354265 ])

2008-11-27  Vladimir Tzankov  <vtzankov@gmail.com>

	* tests.lisp (run-test): use log file name as package name

2008-11-26  Sam Steingold  <sds@gnu.org>

	* tests.lisp (run-test): accept :OWN-PACKAGE (defaults to T) to
	run tests in an ad hoc package to avoid symbol value conflicts
	in run-all-tests-parallel
	* ffi.tst: do not create FTEST package
	* iofkts.tst, streams.tst, symbol10.tst: remove IN-PACKAGE forms
	* pack11.tst: prefix all package names with PACK11

2008-11-25  Sam Steingold  <sds@gnu.org>

	* mt.tst: check that DESCRIBE and TIMES work on
	THREAD/MUTEX/EXEMPTION objects

2008-11-25  Sam Steingold  <sds@gnu.org>

	* bin-io.tst, clos.tst, encoding.tst, eval20.tst, excepsit.tst,
	* ext-clisp.tst, lambda.tst, macro8.tst, mop.tst, pack11.tst,
	* path.tst, socket.tst, streams.tst, streamslong.tst:
	prefix all open file names with the test file name to avoid
	conflicts when run in parallel

2008-11-22  Vladimir Tzankov  <vtzankov@gmail.com>

	* tests.lisp (run-all-tests-parallel): do not share args between threads

2008-11-21  Vladimir Tzankov  <vtzankov@gmail.com>

	* tests.lisp (run-all-tests-parallel): allow "approximately"
	:concurrency threads to run simultaneously (default 5) and initialize
	the C stack size to 16 MB

2008-11-21  Vladimir Tzankov  <vtzankov@gmail.com>

	* tests.lisp (run-all-tests-parallel): use keyword argument for mutex
	name and WITH-LOCK for locking.

2008-11-20  Sam Steingold  <sds@gnu.org>

	* tests.lisp (*all-tests*, test-weakptr): extracted from run-all-tests
	(run-all-tests): use them
	(run-all-tests-parallel) [(and CLISP MT)]: add
	* Makefile (parallel): new target (calls run-all-tests-parallel)

2008-11-06  Sam Steingold  <sds@gnu.org>

	* macro8.tst: check unused function warnings

2008-10-28  Sam Steingold  <sds@gnu.org>

	* path.tst: add 2 tests for bug #[ 2198109 ]: